--- a/shelfcafe/index.html
+++ b/shelfcafe/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="inner">
             <h1><img src="img/logo.png" width="211" alt="SHELF CAFE"></h1>
-            <p>本と音楽が心地良いカフェ。それがSHELF CAFEです。</p>
+            <p>本と音楽が心地良いカフェ。それがSHELF </p>
         </div>
     </header>
 
