--- a/shelfcafe/index.html
+++ b/shelfcafe/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <title>SHELF CAFE</title>
 <link rel="stylesheet" href="css/reset.css">
 <link rel="stylesheet" href="css/style.css">
@@ -11,7 +12,7 @@
     <header>
         <div class="inner">
             <h1><img src="img/logo.png" width="211" alt="SHELF CAFE"></h1>
-            <p>本と音楽が心地良いカフェ。それがSHELF </p>
+            <p>本と音楽が心地良いカフェ。それがSHELF CAFE</p>
         </div>
     </header>
 
@@ -44,13 +45,12 @@
         <!-- whatsNew -->
 
         <section id="about">
-        	<h2>ABOUT</h2>
+            <h2>ABOUT</h2>
             <p><img src="img/ph_about.jpg" alt=""></p>
             <p>SHELF CAFEでは、国内外の書籍をセレクトしています。普段、なかなか手に取ることのない貴重な書籍が揃っています。美味しいコーヒーが飲める図書館感覚でお楽しみいただけます。</p>
             <p class="moreLink"><a href="#">詳しくはこちらから</a></p>
         </section>
         <!-- about -->
-
         <article id="todaysMenu">
             <h2>TODAY'S MENU</h2>
             <section id="menu01">
@@ -71,11 +71,14 @@
         <!-- todaysMenu -->
     </div>
     <!-- container -->
+</div>
+<!-- wrapper -->
 
-    <footer>
-        <p><small>Copyright &copy; SHELF CAFE. All Rights Reserved.</small></p>
-    </footer>
+<footer>
+    <p><small>Copyright &copy; SHELF CAFE. All Rights Reserved.</small></p>
+</footer>
 
-</div><!-- wrapper -->
+
+
 </body>
 </html>
