--- a/touch.html
+++ b/touch.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>TouchEvent</title>
+    <link rel="stylesheet" href="css/touch.css">
 </head>
 <body>
 <h1>GPS</h1>
