--- a/alphabet/alphabet.html
+++ b/alphabet/alphabet.html
@@ -2,7 +2,9 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=1136, user-scalable=0">
   <title>FM Synthesizer</title>
+  
 
 </head>
 <body>
