weather map api

--- a/weatherapi/ajax.html
+++ b/weatherapi/ajax.html
@@ -15,7 +15,7 @@
 	        <dt>現在の気温: </dt>
 	        <dd id="areaTemp"></dd>
 	    </dl>
-	    <dl class="weatherResult">
+	    <dl class="weatherResults">
 	        <dt>現在の湿度:</dt>
 	        <dd id="areaHumidity"></dd>
 	    </dl>
@@ -29,5 +29,16 @@
 	    </dl>
 	</div>
 <script src="http://code.jquery.com/jquery-2.2.0.min.js"></script>
+<script src="js/script.js"></script>
+<script>
+
+
+
+
+
+
+
+
+</script>
 </body>
 </html>
